--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "nextgenas.sdk.framework": "C:\\local\\flex-sdks\\SDKs\\Flex_0.8.0_AIR_23.0-by-Installer"
+    "nextgenas.sdk.framework": "C:\\local\\flex-sdks\\SDKs\\Flex_0.9.0_AIR_26.0_nightly"
 }
